--- a/src/views/adicionarTarefa.ejs
+++ b/src/views/adicionarTarefa.ejs
@@ -4,15 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/adicionarTarefa.css">
   <title>Document</title>
 </head>
 
 <body>
   <h1>Adicionar Tarefa</h1>
   <form action="/adicionar" method="post">
+
+    <label for="titulo">Titulo da tarefa</label>
+    <input type="text" name="titulo" id="titulo" required />
+
     <label for="descricao">Descrição da tarefa</label>
     <input type="text" name="descricao" id="descricao" required />
-
+    
     <button type="submit">Adicionar</button>
   </form>
 </body>
